add release scripts